--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "export": "next export"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@headlessui/react": "^1.7.18",
+    "@prisma/client": "^6.9.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "next": "15.1.0",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.9.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18"
