feat: Complete CarbonWise platform with AI-powered carbon tracking
- Add sophisticated Chrome extension with multi-site tracking
- Implement AI carbon calculation engine with location/time factors
- Create comprehensive authentication bridge between web app and extension
- Add real-time dashboard with live activity tracking
- Support major platforms: Amazon, Uber, DoorDash, YouTube, Netflix, ChatGPT, etc.
- Include template files for easy setup (config.example.js, manifest.example.json)
- Enhanced security with proper credential management

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ logs
 
 # Generated files
 /src/generated/prisma
+
+# Chrome extension files with credentials (local development only)
+/chrome-extension/config.js
+/chrome-extension/manifest.json
