--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.344.0",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
+    "openai": "^5.7.0",
     "prisma": "^6.9.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
